# Blueprint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: init_target.cmake  nice_target_sources.cmake
cmake/third_part/qt/: CMakeLists.txt  package.cmake
cmake/third_part/qt/qt6/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/BlueprintUI/: CMakeLists.txt
libraries/BlueprintUI/BlueprintNode/: NodeHeader.cc  NodeHeader.hpp  NodeLayout.cc  NodeLayout.hpp  NodeUI.cc  NodeUI.hpp
libraries/BlueprintUI/BlueprintPainter/: NodePainter.cc  NodePainter.hpp  PinPainter.cc  PinPainter.hpp
libraries/BlueprintUI/BlueprintPin/: BlueprintPin.cc  BlueprintPin.hpp
libraries/BlueprintUI/BlueprintStyle/: CanvasStyle.cc  CanvasStyle.hpp  NodeStyle.cc  NodeStyle.hpp
libraries/BlueprintUI/Canvas/: BlueprintCanvas.cc  BlueprintCanvas.hpp  BlueprintNode.cc  BlueprintNode.hpp  BlueprintPin.cc  BlueprintPin.hpp
libraries/BlueprintUI/Utils/: Algorithm.hpp
libraries/UiComponents/: CMakeLists.txt
libraries/UiComponents/DockWindow/: DockTitleBar.cc  DockTitleBar.hpp
libraries/UiComponents/Input/: QGraphicsInputField.cc  QGraphicsInputField.hpp
